[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/player.gd" type="Script" id=1]
[ext_resource path="res://_src/char_test.png" type="Texture" id=2]
[ext_resource path="res://Player/States/Motion/On_ground/idle.gd" type="Script" id=3]
[ext_resource path="res://Player/States/Motion/On_ground/walk.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Motion/On_air/jump.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Motion/On_ground/crouch.gd" type="Script" id=6]
[ext_resource path="res://Player/States/Combat/stagger.gd" type="Script" id=7]
[ext_resource path="res://Player/States/Combat/death.gd" type="Script" id=8]
[ext_resource path="res://Player/States/Combat/attack.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8.95837, 8.9614 )

[sub_resource type="Animation" id=2]

resource_name = "fall"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=3]

resource_name = "jump"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]

resource_name = "stagger"
length = 0.6
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.707031, 0.0883789, 0.0883789, 1 ), Color( 0.752941, 0.0784314, 0.0784314, 1 ), Color( 1, 1, 1, 1 ), Color( 0.707031, 0.0883789, 0.0883789, 1 ), Color( 1, 1, 1, 1 ), Color( 0.752941, 0.0784314, 0.0784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2 ]
}

[sub_resource type="Animation" id=6]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 33, -31 ), Vector2( 33, 120 ) ]
}

[sub_resource type="Animation" id=7]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 33, -31 ), Vector2( 33, -180 ) ]
}

[node name="player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 29
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 0, -7 )
texture = ExtResource( 2 )
vframes = 2
hframes = 3
frame = 5
_sections_unfolded = [ "Animation", "Material", "Region", "Transform", "Visibility" ]

[node name="SpriteAnim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fall = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/stagger = SubResource( 4 )
anims/walk = SubResource( 5 )
blend_times = [  ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

position = Vector2( 33, -31 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Limit", "Offset", "Smoothing", "Transform" ]

[node name="CameraAnim" type="AnimationPlayer" parent="Camera2D" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/look_down = SubResource( 6 )
anims/look_up = SubResource( 7 )
blend_times = [  ]

[node name="RayCastWall" type="RayCast2D" parent="." index="4"]

rotation = -1.5708
scale = Vector2( 0.3, 0.3 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="LookDownTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="States" type="Node" parent="." index="6"]

[node name="Idle" type="Node" parent="States" index="0"]

script = ExtResource( 3 )

[node name="Walk" type="Node" parent="States" index="1"]

script = ExtResource( 4 )

[node name="Jump" type="Node" parent="States" index="2"]

script = ExtResource( 5 )

[node name="Crouch" type="Node" parent="States" index="3"]

script = ExtResource( 6 )

[node name="Stagger" type="Node" parent="States" index="4"]

script = ExtResource( 7 )

[node name="Death" type="Node" parent="States" index="5"]

script = ExtResource( 8 )

[node name="Attack" type="Node" parent="States" index="6"]

script = ExtResource( 9 )

[connection signal="animation_finished" from="SpriteAnim" to="States/Stagger" method="_on_SpriteAnim_animation_finished"]

[connection signal="animation_finished" from="SpriteAnim" to="." method="_on_SpriteAnim_animation_finished"]

[connection signal="timeout" from="LookDownTimer" to="States/Crouch" method="_on_LookDownTimer_timeout"]


